--- a/core/Makefile
+++ b/core/Makefile
@@ -1492,6 +1492,9 @@ endif
 
 $(INTERNAL_OTA_PACKAGE_TARGET): $(BUILT_TARGET_FILES_PACKAGE) $(DISTTOOLS)
 	@echo -e ${CL_YLW}"Package OTA:"${CL_RST}" $@"
+ifneq ($(MK_BUILDTYPE),RELEASE)
+	$(hide) APKCERTS=$(APKCERTS_FILE) TARGET_PACK=$(BUILT_TARGET_FILES_PACKAGE) ./build/tools/releasetools/pngcrusher
+endif
 	MKBOOTIMG=$(BOARD_CUSTOM_BOOTIMG_MK) \
 	$(OTA_FROM_TARGET_SCRIPT) -v \
 	   -p $(HOST_OUT) \
